# django-formset

./: .gitignore  MANIFEST.in  README.rst  setup.cfg
formset/: mixins.py
formset/locale/es/LC_MESSAGES/: django.mo  django.po
formset/static/formset/js/: formset.js
formset/templates/formset/: _formset.html  formset.html
formset/templatetags/: formset.py
tests/: models.py  test_settings.py  test_templatetags.py  test_views.py  views.py
