[metadata]
name = django-formset
version = 1.2
description = Dynamic formset manipulation in template and CBV's
long_description = file: README.rst
url = https://www.wlab.com.uy/
author = Marcelo Baeza
author_email = mbaeza@wlab.com.uy
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.6
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7.3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: